feat(modules): update code & create splash screen & walkthrough apps

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,13 @@
     <string name="reviews">Reviews</string>
     <string name="summary">Summary</string>
     <string name="release_date">Release Date: %s</string>
-    <string name="rating">%s/10</string>
+    <string name="rating">%s / 10</string>
     <string name="favorites">Favorites</string>
     <string name="newest">Newest</string>
     <string name="highest_rated">Highest Rated</string>
     <string name="most_popular">Most Popular</string>
     <string name="action_search">Search</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
